# mistral-laptop-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  install.cmd  install.ps1  install.sh  pyproject.toml
app/: __main__.py  agent.py  agents.py  cli.py  config.py  connector_manager.py  connectors.py  desktop.py  keystore.py  main.py  memory.py  mistral_client.py  router.py  safety.py  scheduler.py  schemas.py  skills.py  storage.py  tools.py  voice.py
tests/: conftest.py  test_app.py
web/: app.js  index.html  styles.css
