[project]
name = "mistral-laptop-assistant"
version = "0.1.0"
description = "Personal assistant that automates your laptop using Mistral AI"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mistralai>=1.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "psutil>=6.1.0",
    "mss>=10.0.0",
    "pyperclip>=1.9.0",
    "rich>=13.9.0",
    "ddgs>=9.0.0",
    "python-multipart>=0.0.29",
    "beautifulsoup4>=4.13.0",
]

[project.optional-dependencies]
desktop = [
    "pystray>=0.19.5",
    "pillow>=11.0.0",
    "pywebview>=5.5",
]

[project.scripts]
mla = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
